fix: fix men container from sharp jump when loading page

--- a/widgets/HomeSection/ui/home-section.scss
+++ b/widgets/HomeSection/ui/home-section.scss
@@ -6,6 +6,7 @@
   &__container {
     display: flex;
     gap: 2.75rem;
+    @include padding-horizontal(2.5rem);
   }
 
   &__title {
@@ -166,8 +167,7 @@
       display: flex;
       flex-direction: column;
       gap: 1.5rem;
-      padding-left: 0;
-      padding-right: 0;
+      @include padding-horizontal(0);
     }
 
     &__cards-in-tab {
